--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,6 @@ prose:
 
 
 
-title: Jekyllxhibit
-author: colaborativa.eu
-twitter: colaborativaeu
+title: Tom Hackshaw
+author: Tom Hackshaw
+twitter: tomhackshaw
